@@ -1,5 +1,11 @@
 2006-12-02  Thomas Moschny  <thomas.moschny@gmx.de>
 
+	* annotate.cc (do_annotate, do_annotate_node): Use a
+	boost::multi_index_container instead of a priority_queue together
+	with a map to store the work units to be processed.
+
+2006-12-02  Thomas Moschny  <thomas.moschny@gmx.de>
+
 	* annotate.cc: Minor cleanups.
 
 2006-12-01  Thomas Moschny  <thomas.moschny@gmx.de>
